# CodeFromBooks

./: .gitignore
DependencyInjectionCode/: DependencyInjectionCode.sln
DependencyInjectionCode/AssortedCodeSnippets/: AssortedCodeSnippets.csproj  Product.cs  ProductRepository.cs
DependencyInjectionCode/AutofacMenu/: AutofacMenu.csproj  IngredientModule.cs  MenuFacts.cs
DependencyInjectionCode/BasketPowerShell/: BasketContainer.cs  BasketPowerShell.csproj  BasketPowerShellSnapIn.cs  GetBasketCmdlet.cs  RemoveBasketCmdlet.cs
DependencyInjectionCode/BasketPowerShellLogic/: BasketManager.cs  BasketPowerShellLogic.csproj  BasketView.cs
DependencyInjectionCode/CacheModel/: CacheModel.csproj  ILease.cs  SlidingLease.cs
DependencyInjectionCode/CampaignManagementUI/: About.aspx  About.aspx.cs  About.aspx.designer.cs  CampaignContainer.cs  CampaignDataSource.cs  CampaignManagementUI.csproj  Contact.aspx  Contact.aspx.cs  Contact.aspx.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Global.asax  Global.asax.cs  Site.Master  Site.Master.cs  Site.Master.designer.cs  Site.Mobile.Master  Site.Mobile.Master.cs  Site.Mobile.Master.designer.cs  Startup.cs  ViewSwitcher.ascx  ViewSwitcher.ascx.cs  ViewSwitcher.ascx.designer.cs  Web.config
DependencyInjectionCode/CampaignPresentationLogic/: CampaignItemPresenter.cs  CampaignPresentationLogic.csproj  CampaignPresenter.cs  (+2 more)
UnitTesting/CPP_TDD/Chapter8/Chapter8/: CMakeLists.txt  Chapter8.vcxproj  Chapter8.vcxproj.filters  WavDescriptor.cpp  WavReader.cpp  WavReader.h  WavReaderTests.cpp  testmain.cpp
(+879 files in other folders)
